# Seed_TodoApp

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/db/: mod.rs  models.rs  schema.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
migrations/2020-07-29-193430_task/: up.sql
migrations/2020-08-03-195032_add_done/: down.sql  up.sql
src/: lib.rs
