[package]
name = "backend"
version = "0.1.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed_todoapp = { path = ".." }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
rocket = "0.4.5"
rocket_cors = { version = "0.5.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]